--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GMAIL_NAME=nightfierce@gmail.com
-GMAIL_PASSWORD=furf wqpl vbap tfjj
+GMAIL_NAME=charlesofficial637@gmail.com
+GMAIL_PASSWORD=zltp vdzq goin vfdn
